# sao-paulo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  GOAL_RESULT.md  IMPLEMENTATION_NOTES.md  INIT.md  README.md  README.pt-BR.md  _BOOTSTRAP.md  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json
.claude/hooks/: pre-code-simplicio.sh
.codex/: config.toml  hooks.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dod.yml  scaffold-self-check.yml
.skills/: NOTICE.md  README.md
.skills/brainstorming/: SKILL.md
.skills/dispatching-parallel-agents/: SKILL.md
.skills/executing-plans/: SKILL.md
.skills/finishing-a-development-branch/: SKILL.md
.skills/lpm-hamt/: SKILL.md
.skills/lpm-map/: SKILL.md
.skills/lpm-skillopt/: SKILL.md
.skills/lpm-virality/: SKILL.md
.skills/lpm-yool/: SKILL.md
.skills/receiving-code-review/: SKILL.md
.skills/requesting-code-review/: SKILL.md
.skills/subagent-driven-development/: SKILL.md
.skills/systematic-debugging/: SKILL.md
.skills/test-driven-development/: SKILL.md
.skills/using-git-worktrees/: SKILL.md
.skills/using-superpowers/: SKILL.md
.skills/verification-before-completion/: SKILL.md
.skills/writing-plans/: SKILL.md
apps/: CMakeLists.txt
examples/: skillopt-rollouts.json
runtime/: STARTER-TO-RUNTIME.md
scripts/: setup-simplicio.sh
src/: detect.rs  hamt.rs  lib.rs  main.rs  profile.rs  render.rs  scan.rs  skillopt.rs  text.rs  virality.rs  yool.rs
test/: run-tests.js
tests/: map_test.rs
(+31 files in other folders)
