[package]
name = "llm-project-mapper"
version = "0.4.2"
edition = "2021"
description = "Native (Rust) engine for llm-project-mapper: fast local project mapping for LLM agents"
license = "MIT"
repository = "https://github.com/wesleysimplicio/llm-project-mapper"

[[bin]]
name = "lpm"
path = "src/main.rs"

[lib]
name = "lpm"
path = "src/lib.rs"

[dependencies]
serde_json = "1"
blake2 = "0.10"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
